--- a/ros2/kitti_lidar_projector/CMakeLists.txt
+++ b/ros2/kitti_lidar_projector/CMakeLists.txt
@@ -17,6 +17,8 @@ find_package(rclcpp REQUIRED)
 find_package(sensor_msgs REQUIRED)
 find_package(cv_bridge REQUIRED)
 find_package(message_filters REQUIRED)
+find_package(tf2 REQUIRED)
+find_package(tf2_ros REQUIRED)
 find_package(Pangolin REQUIRED)
 find_package(OpenCV REQUIRED)
 find_package(Eigen3 REQUIRED)
@@ -48,6 +50,8 @@ ament_target_dependencies(kitti_lidar_projector
         Pangolin
         Sophus
         ORB_SLAM3
+        tf2
+        tf2_ros
         )
 
 install(
