--- a/ros2/kitti_lidar_projector/CMakeLists.txt
+++ b/ros2/kitti_lidar_projector/CMakeLists.txt
@@ -19,6 +19,7 @@ find_package(cv_bridge REQUIRED)
 find_package(message_filters REQUIRED)
 find_package(tf2 REQUIRED)
 find_package(tf2_ros REQUIRED)
+find_package(point_cloud_msg_wrapper REQUIRED)
 find_package(Pangolin REQUIRED)
 find_package(OpenCV REQUIRED)
 find_package(Eigen3 REQUIRED)
@@ -52,6 +53,7 @@ ament_target_dependencies(kitti_lidar_projector
         ORB_SLAM3
         tf2
         tf2_ros
+        point_cloud_msg_wrapper
         )
 
 install(
