Update for dataset preparation tool.

--- a/ros2/DataPreparationTool/CMakeLists.txt
+++ b/ros2/DataPreparationTool/CMakeLists.txt
@@ -1,9 +1,14 @@
 cmake_minimum_required(VERSION 3.5)
 project(data_preparation_tool)
 
-find_package(PCL 1.12.0 REQUIRED)
+set(GeographicLib_DIR "~/libraries/GeographicLib-2.1.2/")
+find_package (GeographicLib REQUIRED)
+
+find_package(PCL 1.13.0 REQUIRED)
 find_package(Eigen3 REQUIRED)
 find_package(OpenCV REQUIRED)
+find_package(cv_bridge REQUIRED)
+find_package(pcl_conversions REQUIRED)
 
 find_package(ament_cmake REQUIRED)
 find_package(ament_index_cpp REQUIRED)
@@ -27,19 +32,23 @@ include_directories(
         ${PCL_INCLUDE_DIRS}
         ${EIGEN3_INCLUDE_DIR}
         ${OpenCV_INCLUDE_DIRS}
+        ${GeographicLib_INCLUDE_DIRS}
 )
 
 add_executable(data_preparation_tool
-        src/data_preparation_tool.cpp
-        src/BagReader.cpp)
+        src/data_preparation_tool_node.cpp
+        src/DataPreparationTool.cpp)
 
 target_link_libraries(data_preparation_tool
         ${PCL_LIBRARIES}
         ${OpenCV_LIBS}
         ${EIGEN3_LIBRARIES}
+        ${GeographicLib_LIBRARIES}
 )
 
 ament_target_dependencies(data_preparation_tool
+        cv_bridge
+        pcl_conversions
         ament_index_cpp
         pluginlib
         sensor_msgs
